--- a/paper/cs242_slam.bib
+++ b/paper/cs242_slam.bib
@@ -29,7 +29,7 @@
 @inproceedings{rogers2010slam,
   title={Slam with expectation maximization for moveable object tracking},
   author={Rogers, John G and Trevor, Alexander JB and Nieto-Granda, Carlos and Christensen, Henrik Iskov},
-  booktitle={Intelligent Robots and Systems (IROS), 2010 IEEE/RSJ International Conference on},
+  booktitle={Proc. of IEEE Conf. on Intelligent Robots and Systems},
   pages={2077--2082},
   year={2010},
   organization={IEEE}
@@ -38,7 +38,7 @@
 @inproceedings{wang2003online,
   title={Online simultaneous localization and mapping with detection and tracking of moving objects: Theory and results from a ground vehicle in crowded urban areas},
   author={Wang, Chieh-Chih and Thorpe, Charles and Thrun, Sebastian},
-  booktitle={Robotics and Automation, 2003. Proceedings. ICRA'03. IEEE International Conference on},
+  booktitle={Proc. of IEEE Conf. on Robotics and Automation},
   volume={1},
   pages={842--849},
   year={2003},
@@ -48,7 +48,7 @@
 @inproceedings{g2o,
   title={g2o: A general framework for graph optimization},
   author={Kummerle, Rainer and Grisetti, Giorgio and Strasdat, Hauke and Konolige, Kurt and Burgard, Wolfram},
-  booktitle={Robotics and Automation (ICRA), 2011 IEEE International Conference on},
+  booktitle={Proc. of IEEE Conf. on Robotics and Automation},
   pages={3607--3613},
   year={2011},
   organization={IEEE}
@@ -57,15 +57,14 @@
 @InProceedings{haehnel03iros,
   author    = {H{\"a}hnel, D. and Burgard, W. and Fox, D. and Thrun, S.},
   title     = {A highly efficient {FastSLAM} algorithm for generating cyclic maps of large-scale environments from raw laser range measurements},
-  booktitle = {Proc.~of the IEEE/RSJ International Conference on 
-               Intelligent Robots and Systems (IROS)},
+  booktitle = {Proc. of the IEEE Conf. on Intelligent Robots and Systems},
   year      = {2003}
 } 
 
 @InProceedings{Switchable12,
   author    = {Niko Sunderhauf and Peter Protzel},
   title     = {Switchable Constraints for Robust Pose Graph SLAM},
-  booktitle = {Proc. of IEEE Conf. on Intelligent Robots and Systems (IROS), 2012},
+  booktitle = {Proc. of IEEE Conf. on Intelligent Robots and Systems},
   year      = {2012}
 } 
 
@@ -78,3 +77,10 @@
   year={1998},
   publisher={Springer}
 }
+
+@InProceedings{DCS,
+  author    = {Pratik Agarwal and Gian Diego Tipaldi and Luciano Spinello and Cyrill Stachniss and Wolfram Burgard},
+  title     = {Robust Map Optimization using Dynamic Covariance Scaling},
+  booktitle = {Proc. of IEEE Conf. on Robotics and Automation},
+  year      = {2013}
+} 
