--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -9,7 +9,8 @@
 %\documentstyle[nips13submit_09,times,art10]{article} % For LaTeX 2.09
 
 
-\title{Robust Graph SLAM in Dynamic Environments with Moving Landmarks}
+\title{Robust Graph SLAM in Dynamic \\
+Environments with Moving Landmarks}
 
 
 \author{
@@ -74,7 +75,6 @@ Providence, RI 02912 \\
 \input{algorithm}
 \input{experiments}
 \input{discussion}
-\input{timeline}
 \input{appendix}
 
 \bibliographystyle{plain}
