--- a/paper/cs242_slam.bib
+++ b/paper/cs242_slam.bib
@@ -26,6 +26,16 @@
   year =         2008,
 }
 
+@article{wolf05,
+  author = {Denis F. Wolf and Gaurav S. Sukhatme},
+  title = {Mobile Robot Simultaneous Localization and Mapping in Dynamic Environments},
+  journal = {Autonomous Robots},
+  volume = {19},
+  pages = {53-65},
+  month = {July},
+  year = 2005,
+}
+
 @inproceedings{rogers2010slam,
   title={Slam with expectation maximization for moveable object tracking},
   author={Rogers, John G and Trevor, Alexander JB and Nieto-Granda, Carlos and Christensen, Henrik Iskov},
@@ -83,4 +93,11 @@
   title     = {Robust Map Optimization using Dynamic Covariance Scaling},
   booktitle = {Proc. of IEEE Conf. on Robotics and Automation},
   year      = {2013}
+}
+
+@INPROCEEDINGS{iros14-frog,
+  author = {Rafael Ram\'{o}n-Vigo and Javier P\'{e}rez  and Fernando Caballero and Luis Merino},
+  title = {Navigating among people in crowded environment: Datasets for localization and human robot interaction},
+  booktitle = {Proceedings of the  Workshop on Robots in Clutter: Perception and Interaction in Clutter, IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
+  year = {2014},
 } 
