--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -1,13 +1,11 @@
 \section{INTRODUCTION}
 
 Simultaneous localization and mapping (SLAM) is a central problem for
-autonomous robot navigation. \cj{*run on sentence, split* Graph SLAM formulate it as an inference problem
-on a factor graph, where landmark locations and robot poses are the hidden
-variables nodes to be mapped and localized, and spatial measurements are the
-observed factor nodes as constraints between variable nodes.} The goal of
+autonomous robot navigation. \cj{*run on sentence, split* xlz: } Graph SLAM formulates it as an inference problem
+on a factor graph. In the factor graph, spatial measurements are the observed factor nodes as constraints between variable nodes of landmark locations and robot poses. The goal of
 the inference problem is to obtain the maximum likelihood estimate of the
 joint probability of the graph, which becomes the geometrically consistent
-estimate of the robot's trajectory and the map. This maximum likelihood estimate on factor graphs can be solved by belief propagation \cj{perhaps cite Weiss et al.}, or more recently, by numerical methods after converting into a nonlinear squares optimization \cj{cite iSAM?}.  
+estimate of the robot's trajectory and the map. This maximum likelihood estimate on factor graphs can be solved by belief propagation \cj{perhaps cite Weiss et al. xlz: which one?}, or more recently, by numerical methods after converting into a nonlinear squares optimization \cj{cite iSAM? xlz: fixed}, e.g. iSAM\cite{isam} and g2o\cite{g2o}.
 
 Problems arise in SLAM loop closures when factors incorrectly link unrelated variable nodes.  Such false positives effectively create wormholes between spatially distant locations and, thus, distort the map geometry. In pose graphs, loop closures specify spatial localities between arbitrary poses, but often wrongly connect randomly poses because of bad decisions from the front-end.  In landmark-based graphs, the data association process can also easily obtain wrong visual feature correspondences, connecting landmarks to the wrong poses. This necessitates robust SLAM.
 
